# HFExamples

./: .gitignore  AutoSpeechRecognition.py  ImageSegmentation.py  README.md  TranslantionAndSummarization.py  audioClassification.py  gradio_speech_recognition.py  imageCaptioning.py  imageToText.py  multimodalQanA.py  objectDetection.py  pyproject.toml  textToSpeech.py  zeroShotImageClassifier.py
GradioUI/: ImageCaptioning.py  depthEstimation.py  gradio_speech_recognition.py  objectDetection.py
